--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a id="a_bussiness" href="#news">IT Bussiness Solutions</a>
+                    <a id="a_bussiness" href="IT_Bussiness_Solutions/">IT Bussiness Solutions</a>
                     <div class="dropdown-content">
                         <a>Cloud and Hosted Solutions</a>
                         <a>Projects &amp; Support</a>
