--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
     <div id="list">
         <div class="hlist list_item">Menu<i class="fa fa-times" aria-hidden="true"></i></div>
         <div class="scrollpane">
-        <div class="list_item">IT Bussiness Solutions</div>
+        <a class="list_item">IT Bussiness Solutions</a>
             <div class="sublist_item">Cloud and Hosted Solutions</div>
             <div class="sublist_item">Hardware as a Service (HaaS)</div>
             <div class="sublist_item">On Demand Support</div>
             <div class="sublist_item">Network Design and Implementation</div>
-            <div class="sublist_item">Hosted exchange</div>
-            <div class="sublist_item">Office 365</div>
+            <div class="sublist_item">Hosted exchange &amp; Office 365</div>
+            
             <div class="sublist_item">Backup Storage and Disaster Recovery</div>
             <div class="sublist_item">Project Design, Development Management</div>
-         <div class="list_item">Asset Security</div>   
+         <a class="list_item">Asset Security</a>   
             <div class="sublist_item">Door Access System</div>
             <div class="sublist_item">CCTV</div>
             <div class="sublist_item">GDPR Consulting</div>
-        <div class="list_item ">Hotel IT Management</div>   
+        <a class="list_item ">Hotel IT Management</a>   
             <div class="sublist_item">Process Management</div>
             <div class="sublist_item">Cloud-based PMS Software</div>
             <div class="sublist_item">Sound Systems</div>    
             <div class="sublist_item">IT Management &amp; Support</div> 
-        <div class="list_item ">IT Facility</div>   
+        <a class="list_item ">IT Facility</a>   
             <div class="sublist_item">Pasportisaion &amp; Inventarisation</div>
             <div class="sublist_item">Help Desk</div>
             <div class="sublist_item">Inteligentne Merace</div>    
