--- a/IT_Bussiness_Solutions/hosted_exchange_office_365.html
+++ b/IT_Bussiness_Solutions/hosted_exchange_office_365.html
@@ -23,7 +23,7 @@
     <div id="list">
         <div class="hlist list_item">Menu<i class="fa fa-times" aria-hidden="true"></i></div>
         <div class="scrollpane">
-        <div class="list_item">IT Bussiness Solutions</div>
+        <a class="list_item">IT Bussiness Solutions</a>
             <div class="sublist_item">Cloud and Hosted Solutions</div>
             <div class="sublist_item">Hardware as a Service (HaaS)</div>
             <div class="sublist_item">On Demand Support</div>
