--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="sublist_item">Hardware as a Service (HaaS)</div>
             <div class="sublist_item">On Demand Support</div>
             <div class="sublist_item">Network Design and Implementation</div>
-            <div class="sublist_item">Hostovaný Exchange &amp; Office 365</div>
+            <a href="hosted_exchange_office_365.html" class="sublist_item">Hostovaný Exchange &amp; Office 365</a>
             
             <div class="sublist_item">Backup Storage and Disaster Recovery</div>
             <div class="sublist_item">Project Design, Development Management</div>
