harpunka test part1

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
     </div>
     <header >
         <div id="top_bar">
+            
+            <div class="sk flag"></div>
+            <div class="en flag"></div>
             <div id="phone">
                 <a href="callto:00421 904 555 555">
                     <i class="fa fa-phone" aria-hidden="true"></i> +421 904 555 555
@@ -60,6 +63,8 @@
             </a>
         </div>
         <div id="main_bar">
+            <div class="lang"></div>
+            <div class="lang_drop"></div>
             <div id="logo">
             </div>
             <ul id="links">
