harpunka test part2

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
         </div>
         <div id="main_bar">
             <div class="lang"></div>
-            <div class="lang_drop"></div>
+            <div class="lang_drop">
+                <div class="en flag"></div>
+                English
+            </div>
             <div id="logo">
             </div>
             <ul id="links">
