--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div id="photo" >
         <div class="center">
             <h1>HOTEL IT</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore. sed do eiusmod tempor incididunt ut labore et dolore</p>
+            <p>Slovenska verzia webu sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore. sed do eiusmod tempor incididunt ut labore et dolore</p>
         </div>
     </div>
     <section>
