--- a/en/IT_Bussiness_Solutions/hosted_exchange_office_365.html
+++ b/en/IT_Bussiness_Solutions/hosted_exchange_office_365.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     
     <!-- STYLES -->
-    <link  href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <link rel="stylesheet"  type="text/css" href="../../css/reset.css">
