--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <link rel="stylesheet"  type="text/css" href="css/reset.css">
-    <style>
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800');
-</style>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     
 </head>
