--- a/en/IT_Bussiness_Solutions/hosted_exchange_office_365.html
+++ b/en/IT_Bussiness_Solutions/hosted_exchange_office_365.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Hosted exchange</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="../rsc/favicons/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="../rsc/favicons/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="../rsc/favicons/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="../rsc/favicons/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="../rsc/favicons/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="../rsc/favicons/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="../rsc/favicons/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="../rsc/favicons/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="../rsc/favicons/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="../rsc/favicons/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../rsc/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="../rsc/favicons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../rsc/favicons/favicon-16x16.png">
+<link rel="manifest" href="../rsc/favicons/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="../rsc/favicons/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
