--- a/en/IT_Bussiness_Solutions/hosted_exchange_office_365.html
+++ b/en/IT_Bussiness_Solutions/hosted_exchange_office_365.html
@@ -15,6 +15,9 @@
 <link rel="icon" type="image/png" sizes="32x32" href="../../rsc/favicons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="96x96" href="../../rsc/favicons/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../../rsc/favicons/favicon-16x16.png">
+<meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="mobile-web-app-capable" content="yes">
 <link rel="manifest" href="../../rsc/favicons/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="../../rsc/favicons/ms-icon-144x144.png">
